subscribe now added

--- a/index.html
+++ b/index.html
@@ -623,16 +623,22 @@
 
     </section>
 
-    <footer class="subscribe mt-5">
+    <section class="subscribe mt-5">
         <div class="container">
             <div class="subscribe-body">
                 <h1>SUBSCRIBE <strong>NOW</strong></h1>
                 <p>Signup for awesome news about our new products and know our special discounts on products.</p>
-                <!-- <a href="#" class="btn btn-lg btn-white">SHOP NOW</a> -->
+                <form id="subscribebox">
+                    <input id="subscribe" type="text" name="emailAddress" placeholder="Enter email address">
+                    <button class="btn btn-sm btn-theme" type="submit">Subscribe</button>
+                </form>
+
             </div>
             <img src="images/rectangle-grey.png" alt="two people standing">
         </div>
+    </section>
 
+    <footer>
         <div class="copyright">
             <div class="container">© Copyright 2022 Kenkata</div>
         </div>
@@ -641,6 +647,5 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="script.js"></script>
-    <div style="height: 4000px;"></div>
 </body>
 </html>
