--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-male-body.png" alt="placeholder image">
                         <div class="card-body">
@@ -242,8 +242,8 @@
                             <li><i class="fa-solid fa-circle outofstock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-male-chest.png" alt="placeholder image">
                         <div class="card-body">
@@ -271,8 +271,8 @@
                             <li><i class="fa-solid fa-circle outofstock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-male-chest.png" alt="placeholder image">
                         <div class="card-body">
@@ -300,8 +300,8 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-female-body.png" alt="placeholder image">
                         <div class="card-body">
@@ -361,8 +361,8 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-female-coat.png" alt="placeholder image">
                         <div class="card-body">
@@ -390,8 +390,8 @@
                             <li><i class="fa-solid fa-circle outofstock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-male-coat.png" alt="placeholder image">
                         <div class="card-body">
@@ -419,8 +419,8 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-male-jacket.png" alt="placeholder image">
                         <div class="card-body">
@@ -448,8 +448,8 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-female-coat.png" alt="placeholder image">
                         <div class="card-body">
@@ -472,6 +472,7 @@
                 </div>
 
             </div>
+        </div>
 
     </section>
 
@@ -489,28 +490,24 @@
             <div class="flash-sale-body">
                 <div class="flash-sale-timer">
                     <div class="time-left">
-                        <img src="images/white-cogwheel.png" alt="">
                         <div class="timer">
                             <h1>7</h1>
                             <p>Days</p>
                         </div>
                     </div>
                     <div class="time-left">
-                        <img src="images/white-cogwheel.png" alt="">
                         <div class="timer">
                             <h1>23</h1>
                             <p>Hours</p>
                         </div>
                     </div>
                     <div class="time-left">
-                        <img src="images/white-cogwheel.png" alt="">
                         <div class="timer">
                             <h1>46</h1>
                             <p>Minuts</p>
                         </div>
                     </div>
                     <div class="time-left">
-                        <img src="images/white-cogwheel.png" alt="">
                         <div class="timer">
                             <h1>12</h1>
                             <p>seconds</p>
@@ -538,8 +535,8 @@
                         <li><i class="fa-solid fa-circle instock"></i></li>
                         <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                         <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                        <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                        <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                        <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                        <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                     </ul>
                     <img src="images/placeholders/placeholder-male-lg.png" alt="placeholder image">
                     <div class="card-body">
@@ -566,8 +563,8 @@
                             <li><i class="fa-solid fa-circle instock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-female-dress.png" alt="placeholder image">
                         <div class="card-body">
@@ -595,8 +592,8 @@
                             <li><i class="fa-solid fa-circle outofstock"></i></li>
                             <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
                             <li><a href="#"><i class="fa-regular fa-shuffle"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-magnifying-glass"></i></a></li>
-                            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Quick view"><i class="fa-regular fa-magnifying-glass"></i></a></li>
+                            <li><a href="#" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-custom-class="custom-tooltip" data-bs-title="Add to cart"><i class="fa-regular fa-cart-shopping"></i></a></li>
                         </ul>
                         <img src="images/placeholders/placeholder-male-shoes.png" alt="placeholder image">
                         <div class="card-body">
@@ -647,5 +644,10 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    </script>
 </body>
 </html>
