--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <!-- top menu for language and social media -->
         <div class="top-menu">
             <div class="container">
                 <div class="site-settings">
@@ -49,7 +50,9 @@
                     </span>
                 </div>
             </div>
-        </div>
+        </div> <!-- top menu end-->
+
+        <!-- main menu searchbar, my account and shoppingcart -->
         <div class="main-menu">
             <div class="container">
                 <div class="brand">
@@ -71,7 +74,8 @@
                         <span>€9999.00</span>
                     </a>                    
                 </div>
-            </div>
+            </div><!--Main menu end-->
+
             <nav>
                 <div class="container">
                     <div class="browse-categories">
@@ -107,6 +111,7 @@
         </div>
     </section>
 
+    <!-- webinfo shipping, payment delivery -->
     <section class="webshop-info ">
         <div class="container-fluid">
             <div class="info-box">
@@ -139,8 +144,9 @@
             </div>
 
         </div>
-    </section>
+    </section><!--webinfo end-->
 
+    <!--categories -->
     <section class="shop-by-category">
         <div class="container">
             <div class="section-title">
@@ -195,8 +201,9 @@
             </div>
         </div>
 
-    </section>
+    </section><!--categories end-->
 
+    <!-- new arrivals placeholders -->
     <section class="new-arrivals">
         <div class="container">
             <div class="section-title ">
@@ -206,7 +213,6 @@
             </div>
 
             <div class="row row-cols-1 row-cols-md-4 g-4">
-
                 <div class="col">
                     <div class="card h-100">
                         <ul class="card-menu">
@@ -322,12 +328,11 @@
                         <div class="card-background"></div>
                     </div>
                 </div>
-
             </div>
         </div>
+    </section><!--new arrivals end-->
 
-    </section>
-
+    <!--  for new costomers -->
     <section class="new-costomer">
         <div class="container">
             <div class="card1">
@@ -343,8 +348,9 @@
                 <a href="#" class="btn btn-lg btn-white">LEARN MORE</a>
             </div>
         </div>
-    </section>
+    </section><!--new costomers end-->
 
+    <!-- featured products placeholders -->
     <section class="featured-products">
         <div class="container new-arrivals">
             <div class="section-title ">
@@ -474,10 +480,10 @@
             </div>
         </div>
 
-    </section>
+    </section><!-- featured products end-->
 
-    <section class="flash-sale">
-        
+    <!-- flash sale with timer -->
+    <section class="flash-sale">      
         <div class="container">
             <div class="card2">
                 <img src="images/rectangle-theme-small.png" alt="">
@@ -518,8 +524,9 @@
             </div>
         </div>       
 
-    </section>
+    </section><!-- flash sale end-->
 
+    <!-- top sellers placeholder -->
     <section class="top-sellers ">
         <div class="container new-arrivals">
             <div class="section-title ">
@@ -618,8 +625,9 @@
             </div>
         </div>
 
-    </section>
+    </section><!--top sellers end-->
 
+    <!-- subscribe now email -->
     <section class="subscribe mt-5">
         <div class="container">
             <div class="subscribe-body">
@@ -633,7 +641,7 @@
             </div>
             <img src="images/rectangle-grey.png" alt="two people standing">
         </div>
-    </section>
+    </section><!-- subscribe now end-->
 
     <footer>
         <div class="copyright">
